--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   app:
     build:
       # Go実装の場合は golang/ PHP実装の場合は php/ Python実装の場合は python/ に変更
-      context: ruby/
+      context: node/
       dockerfile: Dockerfile
     depends_on:
       - mysql
