--- a/webapp/node/package.json
+++ b/webapp/node/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-session": "^1.17.3",
-    "connect-memcached": "^0.2.3",
+    "connect-memcached": "^2.0.0",
     "mysql2": "^3.9.4",
     "multer": "^1.4.5-lts.1",
     "ejs": "^3.1.9",
@@ -21,6 +21,8 @@
     "@types/multer": "^1.4.7",
     "@types/ejs": "^3.1.4",
     "@types/express-flash": "^0.0.4",
+    "@types/connect-memcached": "^1.0.3",
+    "@types/node": "^20.11.5",
     "typescript": "^5.4.2",
     "ts-node-dev": "^2.0.0"
   }
