--- a/webapp/node/package.json
+++ b/webapp/node/package.json
@@ -7,22 +7,21 @@
     "dev": "ts-node-dev --respawn src/app.ts"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "express-session": "^1.17.3",
-    "connect-memcached": "^0.2.3",
-    "mysql2": "^3.9.4",
-    "multer": "^1.4.5-lts.1",
+    "connect-memcached": "^2.0.0",
     "ejs": "^3.1.9",
-    "express-flash": "^0.0.2"
+    "express": "^4.19.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.9.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.7",
-    "@types/connect-memcached": "^0.2.1",
-    "@types/multer": "^1.4.7",
     "@types/ejs": "^3.1.4",
+    "@types/express": "^4.17.21",
     "@types/express-flash": "^0.0.4",
-    "typescript": "^5.4.2",
-    "ts-node-dev": "^2.0.0"
+    "@types/express-session": "^1.18.2",
+    "@types/multer": "^1.4.7",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.2"
   }
 }
