--- a/webapp/node/package.json
+++ b/webapp/node/package.json
@@ -8,22 +8,17 @@
     "start": "node dist/app.js"
   },
   "dependencies": {
-    "@types/connect-memcached": "^1.0.3",
-    "@types/express-session": "^1.18.2",
-    "connect-memcached": "^2.0.0",
-    "ejs": "^3.1.9",
-    "express": "^5.0.0",
-    "express-flash": "^0.0.2",
-    "express-session": "^1.18.1",
-    "multer": "^2.0.0",
-    "mysql2": "^3.9.4"
+    "ejs": "^3.1.10",
+    "multer": "^2.0.1",
+    "mysql2": "^3.14.1",
+    "hono": "^4.7.11",
+    "@hono/node-server": "^1.14.4"
   },
   "devDependencies": {
-    "@types/ejs": "^3.1.4",
-    "@types/express": "^5.0.0",
-    "@types/express-flash": "^0.0.5",
-    "@types/multer": "^1.4.7",
+    "@types/ejs": "^3.1.5",
+    "@types/multer": "^1.4.13",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.2"
+    "typescript": "^5.8.3",
+    "@types/node": "^24.0.1"
   }
 }
