--- a/webapp/node/Dockerfile
+++ b/webapp/node/Dockerfile
@@ -4,7 +4,7 @@ FROM node:22-slim
 RUN \
   --mount=type=cache,target=/var/lib/apt,sharing=locked \
   --mount=type=cache,target=/var/cache/apt,sharing=locked \
-  apt-get update -qq && apt-get install -y build-essential default-libmysqlclient-dev \
+  apt-get update -qq && apt-get install -y build-essential default-libmysqlclient-dev openssl \
   && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /home/webapp
