Add npm manager config with bump rangeStrategy to renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -33,6 +33,12 @@
         "nginx"
       ],
       "versioning": "regex:^(?<major>[0-9]+)\\.(?<minor>[0-9]*[02468])(?<patch>\\d*)$"
+    },
+    {
+      "matchManagers": [
+        "npm"
+      ],
+      "rangeStrategy": "bump"
     }
   ],
   "postUpdateOptions": [
