--- a/webapp/ruby/Dockerfile
+++ b/webapp/ruby/Dockerfile
@@ -4,14 +4,13 @@ FROM ruby:3.4-slim
 RUN \
   --mount=type=cache,target=/var/lib/apt,sharing=locked \
   --mount=type=cache,target=/var/cache/apt,sharing=locked \
-  apt-get update -qq && apt-get install -y build-essential default-libmysqlclient-dev
+  apt-get update -qq \
+  && apt-get install -y build-essential default-libmysqlclient-dev \
+  && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /home/webapp
-COPY Gemfile /home/webapp
-COPY Gemfile.lock /home/webapp
 WORKDIR /home/webapp
-RUN bundle config set --local path 'vendor/bundle'
-RUN bundle install
-COPY . /home/webapp
+COPY Gemfile Gemfile.lock ./
+RUN bundle config set --local path 'vendor/bundle' && bundle install
+COPY . .
 
 ENTRYPOINT ["bundle", "exec", "unicorn", "-c", "unicorn_config.rb"]
