Set bash as default shell with pipefail in PHP Dockerfile

--- a/webapp/php/Dockerfile
+++ b/webapp/php/Dockerfile
@@ -11,6 +11,8 @@ RUN docker-php-ext-install pdo pdo_mysql
 RUN pecl install memcached \
   && docker-php-ext-enable memcached
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
 RUN curl -sS https://getcomposer.org/installer | php \
   && mv composer.phar /usr/local/bin/composer
 
