Add pep621 manager with bump rangeStrategy in renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -61,6 +61,12 @@
         "npm"
       ],
       "rangeStrategy": "bump"
+    },
+    {
+      "matchManagers": [
+        "pep621"
+      ],
+      "rangeStrategy": "bump"
     }
   ],
   "postUpdateOptions": [
