--- a/webapp/python/pyproject.toml
+++ b/webapp/python/pyproject.toml
@@ -5,9 +5,15 @@ description = "private-isu webapp implementation for Python"
 readme = "README.md"
 requires-python = ">=3.14.2"
 dependencies = [
+    "click==8.1.8",
     "flask>=3.1.2",
     "flask-session[memcached]>=0.8.0",
     "gunicorn>=23.0.0",
+    "jinja2==3.1.6",
+    "markupsafe==3.0.2",
     "mysqlclient~=2.2.7",
+    "msgspec==0.19.0",
+    "packaging==24.2",
     "pymemcache>=4.0.0",
+    "werkzeug==3.1.4",
 ]
