add lockfile update strategy for bundler and composer managers

--- a/renovate.json
+++ b/renovate.json
@@ -61,6 +61,18 @@
     },
     {
       "matchManagers": [
+        "bundler"
+      ],
+      "rangeStrategy": "update-lockfile"
+    },
+    {
+      "matchManagers": [
+        "composer"
+      ],
+      "rangeStrategy": "update-lockfile"
+    },
+    {
+      "matchManagers": [
         "npm"
       ],
       "rangeStrategy": "bump"
