--- a/webapp/compose.yml
+++ b/webapp/compose.yml
@@ -14,7 +14,7 @@ services:
 
   app:
     build:
-      # Go実装の場合は golang/ PHP実装の場合は php/ Python実装の場合は python/ に変更
+      # Go実装は golang/ PHP実装は php/ Python実装は python/ Node.js実装は node/ に変更
       context: ruby/
       dockerfile: Dockerfile
     depends_on:
