update golang depName to go and improve version match regex

--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,7 @@
         "/provisioning/bench/ansible/02_golang.yml/"
       ],
       "datasourceTemplate": "golang-version",
-      "depNameTemplate": "golang",
+      "depNameTemplate": "go",
       "matchStrings": [
         "go(?<currentValue>[0-9]*.[0-9]*.[0-9]*)"
       ]
@@ -32,9 +32,9 @@
         "/.github/workflows/codeql.yml/"
       ],
       "datasourceTemplate": "golang-version",
-      "depNameTemplate": "golang",
+      "depNameTemplate": "go",
       "matchStrings": [
-        "go-version: (?<currentValue>[0-9]*.[0-9]*.[0-9]*)"
+        "go-version: \"?(?<currentValue>[0-9]*.[0-9]*.[0-9]*)\"?"
       ]
     },
     {
@@ -43,9 +43,9 @@
         "/osv-scanner.toml/"
       ],
       "datasourceTemplate": "golang-version",
-      "depNameTemplate": "golang",
+      "depNameTemplate": "go",
       "matchStrings": [
-        "GoVersionOverride = \"(?<currentValue>[0-9]*.[0-9]*.[0-9]*)\""
+        "GoVersionOverride = \"?(?<currentValue>[0-9]*.[0-9]*.[0-9]*)\"?"
       ]
     }
   ],
