--- a/provisioning/image/ansible/04_xbuild.yml
+++ b/provisioning/image/ansible/04_xbuild.yml
@@ -27,7 +27,7 @@
       tags:
         - python3
     # golang
-    # datasource=golang-version depName=golang
+    # datasource=golang-version depName=go
     - shell: /home/isucon/.xbuild/go-install 1.25.5 /home/isucon/.local/go $(uname -s | tr [A-Z] [a-z]) $(dpkg --print-architecture)
       args:
         creates: /home/isucon/.local/go/bin/go
